--- a/index.html
+++ b/index.html
@@ -110,6 +110,13 @@
                         </p>
                     </a>
                 </div>
+                <div class="list url-list">
+                    <a href="https://xiaolongmao999.github.io/jieweiliangyao/" target="_blank">
+                        <p class="name">
+                            戒为良药
+                        </p>
+                    </a>
+                </div>
                 <div class="list kongs"></div>
                 <div class="list kongs"></div>
                 <div class="list kongs"></div>
