--- a/index.html
+++ b/index.html
@@ -90,6 +90,20 @@
                     </a>
                 </div>
                 <div class="list url-list">
+                    <a href="https://xiaolongmao999.github.io/yjygyzsj/" target="_blank">
+                        <p class="name">
+                            俞净意公遇灶神记
+                        </p>
+                    </a>
+                </div>
+                  <div class="list url-list">
+                    <a href="https://xiaolongmao999.github.io/gsdjjyj/" target="_blank">
+                        <p class="name">
+                            关圣帝君戒淫经
+                        </p>
+                    </a>
+                </div>
+                <div class="list url-list">
                     <a href="https://xiaolongmao999.github.io/skbj/" target="_blank">
                         <p class="name">
                             寿康宝鉴
