--- a/index.html
+++ b/index.html
@@ -62,77 +62,77 @@
             </div>
             <div class="site-list">
                 <div class="list url-list">
-                    <a href="https://xlmdh.top/lfsx/index.html" target="_blank">
+                    <a href="https://xiaolongmao999.github.io/lfsx/index.html" target="_blank">
                         <p class="name">
                             了凡四训
                         </p>
                     </a>
                 </div>
                 <div class="list url-list">
-                    <a href="https://xlmdh.top/tsgyp/index.html" target="_blank">
+                    <a href="https://xiaolongmao999.github.io/tsgyp/index.html" target="_blank">
                         <p class="name">
                             太上感应篇
                         </p>
                     </a>
                 </div>
                 <div class="list url-list">
-                    <a href="https://xlmdh.top/tsgyphb/" target="_blank">
+                    <a href="https://xiaolongmao999.github.io/tsgyphb/" target="_blank">
                         <p class="name">
                             太上感应篇汇编
                         </p>
                     </a>
                 </div>
                 <div class="list url-list">
-                    <a href="https://xlmdh.top/wcdjyzw/" target="_blank">
+                    <a href="https://xiaolongmao999.github.io/wcdjyzw/" target="_blank">
                         <p class="name">
                             文昌帝君阴骘文
                         </p>
                     </a>
                 </div>
                 <div class="list url-list">
-                    <a href="https://xlmdh.top/yjygyzsj/" target="_blank">
+                    <a href="https://xiaolongmao999.github.io/yjygyzsj/" target="_blank">
                         <p class="name">
                             俞净意公遇灶神记
                         </p>
                     </a>
                 </div>
                   <div class="list url-list">
-                    <a href="https://xlmdh.top/gsdjjyj/" target="_blank">
+                    <a href="https://xiaolongmao999.github.io/gsdjjyj/" target="_blank">
                         <p class="name">
                             关圣帝君戒淫经
                         </p>
                     </a>
                 </div>
                 <div class="list url-list">
-                    <a href="https://xlmdh.top/skbj/" target="_blank">
+                    <a href="https://xiaolongmao999.github.io/skbj/" target="_blank">
                         <p class="name">
                             寿康宝鉴
                         </p>
                     </a>
                 </div>
                 <div class="list url-list">
-                    <a href="https://xlmdh.top/yj/" target="_blank">
+                    <a href="https://xiaolongmao999.github.io/yj/" target="_blank">
                         <p class="name">
                             易经
                         </p>
                     </a>
                 </div>
                 <div class="list url-list">
-                    <a href="https://xlmdh.top/szqjmh/" target="_blank">
+                    <a href="https://xiaolongmao999.github.io/szqjmh/" target="_blank">
                         <p class="name">
                             四种清净明诲
                         </p>
                     </a>
                 </div>
                 <div class="list url-list">
-                    <a href="https://xlmdh.top/jieweiliangyao/" target="_blank">
+                    <a href="https://xiaolongmao999.github.io/jieweiliangyao/" target="_blank">
                         <p class="name">
                             戒为良药
                         </p>
                     </a>
                 </div>
                  <div class="list url-list">
-                    <a href="http://xlmdh.top/yijing/" target="_blank">
+                    <a href="https://xiaolongmao999.github.io/yijing/" target="_blank">
                         <p class="name">
                             易经
                         </p>
